# fEEGA

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/Analysis/: ;  a.out  fft.cpp  fft.h
src/Communication/: .TCPclient.cpp.swp  TCPclient.cpp  TCPclient.h  a.out  loadFile.cpp  ring_buffer.h.gch  ring_buffer.hpp  serialCom.cpp  test.cpp
